--- a/obj-mode/exp-b.html
+++ b/obj-mode/exp-b.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Face recognition and memory experiment</title>
-    <script src="https://unpkg.com/jspsych@7.1.2"></script>
+    <script src="https://unpkg.com/jspsych@7.2.1"></script>
     <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-external-html@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey@0.1.1"></script>
@@ -13,9 +13,9 @@
     <script src="libraries/jspsych-fdiv-vars.js"></script>
     <script src="libraries/jspsych-fmod-vars.js"></script>
     <script src="libraries/jspsych-cfmt-vars.js"></script>
-    <link href="https://unpkg.com/jspsych@7.1.2/css/jspsych.css" rel="stylesheet" type="text/css" />
-    <link href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css" rel="stylesheet" type="text/css" />
-    <link href="libraries/style-b.css" rel="stylesheet" type="text/css" />
+    <link href="https://unpkg.com/jspsych@7.2.1/css/jspsych.css" rel="stylesheet" type="text/css">
+    <link href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css" rel="stylesheet" type="text/css">
+    <link href="libraries/style-b.css" rel="stylesheet" type="text/css">
   </head>
   <body></body>
   <script src="exp-b.js"></script>
