--- a/obj-mode/exp-c.html
+++ b/obj-mode/exp-c.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Item frequency judgment and face memory test</title>
+    <title>Blob and face experiment</title>
     <script src="https://unpkg.com/jspsych@7.2.1"></script>
     <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-external-html@1.1.0"></script>
