--- a/letter-ensemble/exp1.html
+++ b/letter-ensemble/exp1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>trial</title>
-    <script src="https://unpkg.com/jspsych@7.1.2"></script>
+    <title>Letter Ensemble Task</title>
+    <script src="https://unpkg.com/jspsych@7.2.1"></script>
     <script src="https://unpkg.com/@jspsych/plugin-browser-check@1.0.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-external-html@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey@0.1.1"></script>
@@ -12,7 +12,8 @@
     <script src="https://unpkg.com/@jspsych/plugin-preload@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-animation@1.1.0"></script>
-    <link href="https://unpkg.com/jspsych@7.1.2/css/jspsych.css" rel="stylesheet" type="text/css" />
+    <link href="https://unpkg.com/jspsych@7.2.1/css/jspsych.css" rel="stylesheet" type="text/css">
+    <link href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css" rel="stylesheet" type="text/css">
     <link href="exp1.css" rel="stylesheet" type="text/css" />
   </head>
   <body></body>
