--- a/multitasking/index.html
+++ b/multitasking/index.html
@@ -13,6 +13,8 @@
     <script src="https://unpkg.com/@jspsych/plugin-fullscreen@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-animation@1.1.0"></script>
     <script src="https://unpkg.com/@jspsych/plugin-survey-html-form@1.0.2"></script>
+    <script src="jspsych-cfmt-vars.js"></script>
+    <script src="jspsych-fdiv-vars.js"></script>
     <link href="https://unpkg.com/jspsych@7.2.1/css/jspsych.css" rel="stylesheet" type="text/css" />
     <link href="https://unpkg.com/@jspsych/plugin-survey@0.1.1/css/survey.css" rel="stylesheet" type="text/css">
     <link href="exp.css" rel="stylesheet" type="text/css" />
